# nlp-project

./: .gitignore  README.md  experiment.py  experiment_report.yaml  main.py  pyproject.toml  result_plots.py  solvers_count.py  validate_samples.py
dataset/: algo_problems.py  game_of_24.py  live_code_bench.py  score_utils.py  test_score_utils.py
nlp_project/: experiment.py
reports/: conversations_report_20250405_151455.yaml  conversations_report_20250405_170713.yaml  conversations_report_20250411_211446.yaml  conversations_report_20250503_143441.yaml  conversations_report_20250503_172819.yaml  conversations_report_20250503_201859.yaml  conversations_report_20250503_231556.yaml  conversations_report_20250504_000427.yaml  conversations_report_20250504_002021.yaml  conversations_report_20250504_011823.yaml  conversations_report_20250504_013002.yaml  conversations_report_20250504_014511.yaml  conversations_report_20250504_100600.yaml  conversations_report_20250504_192703.yaml  conversations_report_20250504_202600.yaml  conversations_report_20250504_210514.yaml  experiment_report_20250322_163726.yaml  experiment_report_20250405_151455.yaml  experiment_report_20250405_170713.yaml  experiment_report_20250411_211446.yaml  experiment_report_20250503_143441.yaml  experiment_report_20250503_172819.yaml  experiment_report_20250503_201859.yaml  experiment_report_20250503_231556.yaml  experiment_report_20250504_000427.yaml  experiment_report_20250504_002021.yaml  experiment_report_20250504_011823.yaml  experiment_report_20250504_013002.yaml  experiment_report_20250504_014511.yaml  (+5 more)
(+21 files in other folders)
